Fix file system access in Windows
Eclipse in Windows didn't like the unix-like handling of
file system paths for th secure preference store. We are
now better in the cross-platform department.